# stage0

./: .actrc  .gitignore  Dockerfile.harness  LICENSE-MIT  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml
crates/ena/: Cargo.toml  build.rs
crates/ena/src/: binding.rs  device.rs  main.rs  pci.rs  snp.rs
crates/stage0/: Cargo.toml
crates/stage0-sign/: Cargo.toml
crates/stage0-sign/src/: main.rs
crates/stage0-test-payload/: Cargo.toml
crates/stage0-test-payload/src/: main.rs
crates/stage0/src/: config.rs  dns4.rs  http.rs  main.rs  net.rs  sig.rs  tcp4.rs  udp4.rs
tools/: build.sh  gen-keys.sh  normalize-fat-timestamps.py  qemu-test.sh
tools/publish/: README.md  cleanup.sh
tools/publish/ec2/: create.sh  launch.sh
tools/publish/gcp/: .gitignore  create.sh  get-console.sh  install-gcloud.sh  launch-instance.sh
