[package]
name = "ena"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Clean-room UEFI SimpleNetworkProtocol driver for the AWS Elastic Network Adapter"

# Standalone workspace like stage0: only builds for *-unknown-uefi, kept out of any
# parent workspace. Produces `ena.efi`, a resident UEFI boot-service driver that
# stage0 loads at runtime when it sees an ENA device (PCI vendor 0x1d0f). build.rs
# forces the EFI_BOOT_SERVICE_DRIVER PE subsystem so the image stays resident.
[workspace]

[dependencies]
uefi = { version = "0.35", features = ["alloc", "global_allocator", "panic_handler"] }
uefi-raw = "0.11"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
